2004-09-27  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Changed message on failing to display help to something
              more friendly.
              Improved file info flags: Links are handled correctly now.
              Finished implementing if recursive directory deleting.
              Fixed memory leak in deletion code.
    * Removed unused files: mime-programs-sql.c mime-programs-sql.h 
                            update_mime_db.c update_mime_db.h 
                            mime-sql.h mime.c mime.h mime-sql.c
    * familiar/control1: Removed dependency to libsqlite0.
        
2004-09-20  Florian Boor  <florian.boor@kernelconcepts.de>

    * Makefile: Removed obsolete -lsqlite.

2004-09-20  Florian Boor  <florian.boor@kernelconcepts.de>

    * Released Version 0.20
    * guitools.c: Filter usbdevfs from filesystems.

2004-09-19  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Changed dirbrowser default size.
              Made dirbrowser size adjustable.
    * guitools.c: Monitor mountpoints and activate items if available.

2004-09-17  Florian Boor  <florian.boor@kernelconcepts.de>
    
    * guitools.c: Fixed several bugs.
    * main.c: Limited size of directory browser.
    * main.c, guitools.c: Added tools for fast directory access.
    * main.c: Removed some old cruft.
    * guitools.*: New files for additional GUI elements.
    * Makefile: Removed unused stuff, increased version number.

2004-09-07  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Removed obsolete code in button_clicked(), use open_with() now.
              Enables infoprints using the default application.

2004-09-06  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: More infoprints.

2004-09-04  Florian Boor  <florian.boor@kernelconcepts.de>

    * main.c: Added support for infoprints when starting external applications.
    * familiar/control1: Depends on libgpewidget 0.89 now.
